# ievr_website

./: dockerfile
backend/: .gitignore  Cargo.toml
backend/assets/: index.html
backend/databases/: characters.sqlite  characters.sqlite-shm  characters.sqlite-wal
backend/databases/translations/: de.sqlite  en.sqlite  es.sqlite  fr.sqlite  it.sqlite  ja.sqlite  pt.sqlite  zh_hans.sqlite  zh_hant.sqlite
backend/src/: character.rs  main.rs  models.rs  routes.rs  state.rs  translations.rs
backend/src/character/: common.rs  summary.rs
backend/src/models/: character_summary.rs  common.rs  skill.rs
backend/src/routes/: characters.rs  heroes.rs  skills.rs
frontend/src/: App.tsx
frontend/src/api/: characters.ts
frontend/src/components/: CharacterList.tsx
frontend/src/types/: character.ts
