[package]
name = "ievr_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
axum-extra = { version = "0.12.5", features = ["query"] }
serde = "1.0.228"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.49", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }
